--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -55,9 +55,9 @@
             
                 <section class="caja-producto">
 
-            <img class="imagen-producto" src="../imagenes/Jeans.png" alt="Jeans">
-            <img class="imagen-producto" src="../imagenes/sweaters.jpg" alt="sweaters" >
-            <img class="imagen-producto" src="../imagenes/Jeans (2).png" alt="remeras" >
+            <img class="imagen-producto" src="../imagenes/JEANS.jpg" alt="Jeans">
+            <img class="imagen-producto" src="../imagenes/REME.jpg" alt="sweaters" >
+            <img class="imagen-producto" src="../imagenes/SWEATERS (2).jpg" alt="remeras" >
 
         </section>
 
