--- a/pages/Promociones.html
+++ b/pages/Promociones.html
@@ -21,7 +21,7 @@
         <img class="banner" src="../imagenes/banner.jpg" alt="logo" >
 
     
-    <nav class="navbar navbar-expand-lg bg-light" style="background-color:#F6CED8 ;">
+    <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
