--- a/pages/Guia-de-talles.html
+++ b/pages/Guia-de-talles.html
@@ -16,7 +16,7 @@
 <div class="container">
 <header>
 
-<img class="banner" src="../imagenes/banner.jpg" alt="logo" >
+<img class="banner" src="../imagenes/img-banner.jpg" alt="logo" >
 
 
 <nav class="navbar navbar-expand-lg bg-light ">
@@ -66,7 +66,7 @@
     <H1 class="titulo"> Guia de talles </H1>
 </section>
 
-   <img class="imagen-principal" src="../imagenes/Guia-de-talles.jpg" alt="Guia-de-talles">
+   <img class="imagen-principal" src="../imagenes/img-Guia-de-talles.jpg" alt="Guia-de-talles">
 
 
 </main>
