--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -16,7 +16,7 @@
     <div class="container">
 <header>
 
-  <img class="banner" src="../imagenes/banner.jpg" alt="logo">
+  <img class="banner" src="../imagenes/img-banner.jpg" alt="logo">
 
    
    
