--- a/pages/Promociones.html
+++ b/pages/Promociones.html
@@ -18,7 +18,7 @@
     <div class="container">
 
     <header>
-        <img class="banner" src="../imagenes/banner.jpg" alt="logo" >
+        <img class="banner" src="../imagenes/img-banner.jpg" alt="logo" >
 
     
     <nav class="navbar navbar-expand-lg bg-light">
@@ -69,7 +69,7 @@
         </div>
 
         <div>
-            <img class="imagen-principal" src="../imagenes/promociones.jpg" alt="promociones" width="600" height="700">
+            <img class="imagen-principal" src="../imagenes/img-promociones.jpg" alt="promociones" width="600" height="700">
         </div>
 
     
