--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div>
                 <section class="fondo">
 
-                <title class="titulo" >  Calu Clothingg</title>
+                <h1 class="titulo" >  Calu Clothingg</h1>
             </section>
 
                 <H2 class="titulo-secundario" >No somos solo una tienda</H2>
