--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="keywords" content="Productos , jeans , remeras , sweaters">
+    <meta name="description" content="Venta de indumentaria femenina , jeans , remeras de calidad ">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+
+    
     <title>Productos</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
