--- a/pages/Promociones.html
+++ b/pages/Promociones.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Promociones , Pago , indumentaria">
+    <meta name="description" content="Venta de indumentaria femenina , jeans , remeras de calidad .">
     <title>Promociones</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
