--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
      
     
 <footer>
-    <h3 class="titulo-secundario fondo">Navegacion</h3>
+    <h5 class="titulo-secundario fondo">Navegacion</h5>
     <ul>
-        <li>Productos</li>
-        <li>Promociones</li>
-        <li>Guia-de-talles</li>
-        <li>Contacto</li>
+        <li class="fst-italic"><a class="nav-link" href="pages/Productos.html">Productos</a></li>
+        <li class="fst-italic" > <a class="nav-link" href="pages/Promociones.html">Promociones</a></li>
+        <li class="fst-italic"> <a class="nav-link" href="pages/Guia-de-talles.html">Guia-de-talles</a></li>
+        <li class="fst-italic" > <a class="nav-link " href="pages/Contacto.html">Contacto</a></li>
     </ul>
-    <p>Copyrigth Caluclothingg 2022.Todos los derechos reservados.Defensa de las y los consumidores <a href="#">Calu Clothingg</a></p>
+    <p>Copyrigth Caluclothingg 2022.Todos los derechos reservados. <a href="#">Calu Clothingg</a></p>
     <img src="imagenes/Calu clothingg (6).png" alt="logo" width="50" height="50">
 </footer>
 </div>
