--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -87,7 +87,15 @@
    
 
     <footer>
-        <p>Copyrigth Caluclothingg 2022.Todos los derechos reservados.Defensa de las y los consumidores <a href="#">Caluclothingg</a></p>
+      <h2 class="titulo-secundario fondo">Navegacion</h2>
+      <ul>
+        <li class="fst-italic"><a class="nav-link" href="../pages/Productos.html">Productos</a></li>
+        <li class="fst-italic"> <a class="nav-link" href="../pages/Promociones.html">Promociones</a></li>
+        <li class="fst-italic"> <a class="nav-link" href="../pages/Guia-de-talles.html">Guia-de-talles</a></li>
+        <li class="fst-italic" > <a class="nav-link" href="../pages/Contacto.html">Contacto</a></li>
+      </ul>
+
+        <p>Copyrigth Caluclothingg 2022.Todos los derechos reservados. <a href="#">Caluclothingg</a></p>
         <img src="../imagenes/Calu clothingg (6).png" alt="logo" width="50" height="50">
     </footer>
 </div>
